bot works