@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.tinkoff.piapi.contract.v1.InstrumentShort;
+import ru.tinkoff.piapi.contract.v1.SecurityTradingStatus;
 import ru.tinkoff.piapi.core.InstrumentsService;
 import ru.tinkoff.piapi.core.MarketDataService;
 import ru.tuganov.dto.InstrumentDto;
@@ -25,23 +26,38 @@ public class InvestmentService {
 
     public ArrayList<InstrumentDto> getInstruments(String instrumentQuery) {
         var instrumentShorts = instrumentsService.findInstrument(instrumentQuery).join();
-        log.info("Кол-во вещей: {}", instrumentShorts.size());
         return dtoListParser(instrumentShorts);
     }
 
     private InstrumentDto dtoParser(InstrumentShort instrumentShort) {
-        var price = marketDataService.getLastPrices(List.of(instrumentShort.getFigi())).join().get(0).getPrice();
-        return new InstrumentDto(instrumentShort.getName(),
-                instrumentShort.getFigi(),
-                price.getUnits());
+        var figi = instrumentShort.getFigi();
+        var isAvailable = instrumentsService.getInstrumentByFigi(figi).join().getTradingStatus();
+//        log.info("status: {}", isAvailable);
+        if (isAvailable == SecurityTradingStatus.SECURITY_TRADING_STATUS_NORMAL_TRADING ||
+            isAvailable == SecurityTradingStatus.SECURITY_TRADING_STATUS_BREAK_IN_TRADING ||
+            isAvailable == SecurityTradingStatus.SECURITY_TRADING_STATUS_DEALER_BREAK_IN_TRADING ||
+            isAvailable == SecurityTradingStatus.SECURITY_TRADING_STATUS_DEALER_NORMAL_TRADING) {
+            var priceee = instrumentsService.getInstrumentByFigi(figi).join();
+            var price = marketDataService.getLastPrices(List.of(figi)).join().getFirst().getPrice();
+            if (price.getUnits() != 0) {
+                return new InstrumentDto(instrumentShort.getName(),
+                        instrumentShort.getFigi(),
+                        price.getUnits());
+            }
+        }
+        return null;
         //price.getNano() выдаст еще допом дробную часть, но пока что рано
     }
 
     private ArrayList<InstrumentDto> dtoListParser(List<InstrumentShort> instrumentShorts) {
         ArrayList<InstrumentDto> instrumentDtos = new ArrayList<>();
         for (InstrumentShort instrumentShort : instrumentShorts) {
-            instrumentDtos.add(dtoParser(instrumentShort));
+            var instrumentDto = dtoParser(instrumentShort);
+            if (instrumentDto != null) {
+                instrumentDtos.add(instrumentDto);
+            }
         }
+        log.info("size: {}", instrumentDtos.size());
         return instrumentDtos;
     }
 
